feat: introduce access control for REST service methods